--- a/res/layout/activity_frame_layout.xml
+++ b/res/layout/activity_frame_layout.xml
@@ -11,4 +11,12 @@
         android:layout_centerVertical="true"
         android:text="@string/hello_world" />
 
+    <RatingBar
+        android:id="@+id/ratingBar1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="22dp" />
+
 </RelativeLayout>
